# Add each CPP file as an executable
add_executable(Boyer_Moore Boyer_Moore.cpp)
add_executable(reversing_using_swap reversing_using_swap.cpp)
add_executable(rotating_using_BLOCK_SWAP_ALGORITHM_1 rotating_using_BLOCK_SWAP_ALGORITHM_1.cpp)
add_executable(Count_Odd_Numbers_in_an_Interval_Range-1523 Count_odd_Numbers_in_an_interval.cpp)
add_executable(rotating_using_BLOCK_SWAP_ALGORITHM rotating_using_BLOCK_SWAP_ALGORITHM.cpp)
add_executable(cyclic_rotate_array cyclic_rotate_array.cpp)
add_executable(heap_sort_STL heap_sort_STL.cpp)
add_executable(insert insert.cpp)
add_executable(Kadane_algorithm Kadane_algorithm.cpp)
add_executable(number_of_counts_after_rotating number_of_counts_after_rotating.cpp)
add_executable(reversing_algorithm reversing_algorithm.cpp)
add_executable(reversing_array reversing_array.cpp)
add_executable(sort_0s_and_1s sort_0s_and_1s.cpp)
add_executable(sort_array sort_array.cpp)
add_executable(superPow superPow.cpp)
add_executable(swap_of_array_using_4_arguments swap_of_array_using_4_arguments.cpp)
add_executable(vector vector.cpp)
add_executable(weight_sort weight_sort.cpp)
add_executable(search_pair search_pair.cpp)
add_executable(merge_sorted_arrays Merge_sorted_arrays.cpp)
add_executable(resize resize.cpp)
add_executable(reserve reserve.cpp)
add_executable(allocator allocator.cpp)
add_executable(custom_sorting custom_sorting.cpp)










