# Add each CPP file as an executable
add_executable(Access_modifier Access_modifier.cpp)
add_executable(example_late_binding example_late_binding.cpp)
add_executable(Operator_overloading Operator_overloading.cpp)
add_executable(class class.cpp)
add_executable(Friends_classes Friends_classes.cpp)
add_executable(Static_data_members_and_methods Static_data_members_and_methods.cpp)
add_executable(destructor destructor.cpp)
add_executable(more_on_friends_functions more_on_friends_functions.cpp)
