add_executable(Double_linked_list Double_linked_list.cpp)
add_executable(list_STL list_STL.cpp)
add_executable(inserting_node_at_beginning inserting_node_at_beginning.cpp)
add_executable(recursion_gfg recursion_gfg.cpp)
add_executable(inserting_node_at_beginning_method1 inserting_node_at_beginning_method1.cpp)
add_executable(recursion_linked_list recursion_linked_list.cpp)
add_executable(inserting_node_at_nth_position inserting_node_at_nth_position.cpp)
add_executable(reversing_the_linked_list reversing_the_linked_list.cpp)
add_executable(linkedlist linkedlist.cpp)