add_executable(set_STL set_STL.cpp)
add_executable(template_max template_max.cpp)
add_executable(to_string to_string.cpp)
add_executable(template template.cpp)
add_executable(thread thread.cpp)
add_executable(function_wrapper function_wrapper.cpp)
add_executable(bind bind.cpp)
add_executable(return_value_optimization return_value_optimization.cpp)


