add_executable(Checking_if_paranthesis_are_balanced Checking_if_paranthesis_are_balanced.cpp)
add_executable(infix_to_postfix infix_to_postfix.cpp)
add_executable(linked_list_using_recursion linked_list_using_recursion.cpp)
add_executable(Implementation_of_stack_using_array Implementation_of_stack_using_array.cpp)
add_executable(reverse_a_string_using_stack reverse_a_string_using_stack.cpp)
add_executable(Implementation_of_stack_using_linkedList Implementation_of_stack_using_linkedList.cpp)
add_executable(reversing_linked_list_stack reversing_linked_list_stack.cpp)
add_executable(Implementation_of_stack_using_linkedList_without_class Implementation_of_stack_using_linkedList_without_class.cpp)
add_executable(stack_fds_technical stack_fds_technical.cpp)
add_executable(infix_to_postfix_another_method infix_to_postfix_another_method.cpp)