add_executable(array array.cpp)
add_executable(vector_ vector.cpp)
add_executable(vector_1 vector_print.cpp)
add_executable(deque deque.cpp)
add_executable(list list.cpp)
add_executable(set set.cpp)
add_executable(map map.cpp)
add_executable(unordered unordered_set.cpp)
add_executable(unordered_m unordered_map.cpp)
add_executable(hash hash.cpp)
add_executable(algorithm algorithm.cpp)
add_executable(emplace_back emplace_back.cpp)
add_executable(set_example set_example.cpp)
add_executable(set_example_1 set_example2.cpp)
add_executable(project STL_Project.cpp)
add_executable(lower_and_upper_bound lower_and_upper_bound.cpp)
add_executable(string_view string_view.cpp)
add_executable(string_view2 string_view2.cpp)
add_executable(music_player music_player.cpp)












