add_executable(array array.cpp)
add_executable(vector_ vector.cpp)
add_executable(vector_1 vector_print.cpp)
add_executable(deque deque.cpp)
add_executable(list list.cpp)
add_executable(set set.cpp)
add_executable(map map.cpp)
add_executable(unordered unordered_set.cpp)
add_executable(unordered_m unordered_map.cpp)
add_executable(hash hash.cpp)
add_executable(algorithm algorithm.cpp)
add_executable(emplace_back emplace_back.cpp)
add_executable(set_example set_example.cpp)
add_executable(set_example_1 set_example2.cpp)
add_executable(project STL_Project.cpp)
add_executable(lower_and_upper_bound lower_and_upper_bound.cpp)
add_executable(string_view string_view.cpp)
add_executable(string_view2 string_view2.cpp)
add_executable(music_player music_player.cpp)
add_executable(vector_bool vector_bool.cpp)
add_executable(forward_list forward_list.cpp)
add_executable(string string.cpp)
add_executable(multiset multiset.cpp)
add_executable(multimap multimap.cpp)
add_executable(unordered_multiset unordered_multiset.cpp)
add_executable(unordered_multimap unordered_multimap.cpp)
add_executable(std_stack std_stack.cpp)
add_executable(std_queue std_queue.cpp)
add_executable(priority_queue priority_queue.cpp)
add_executable(std_span std_span.cpp)
add_executable(std_partial_sort std_partial_sort.cpp)
add_executable(std_stable_sort std_stable_sort.cpp)
add_executable(std_nth_element std_nth_element.cpp)
add_executable(std_anyof_allof_noneof std_anyof_allof_noneof.cpp)
add_executable(std_issorted_ispartitioned_ispermutated std_issorted_ispartitioned_ispermutated.cpp)
add_executable(std_count_countif std_count_countif.cpp)
add_executable(std_find_findif std_find_findif.cpp)
add_executable(std_adjancency_list std_adjancency_list.cpp)
add_executable(std_lexicographical_compare std_lexicographical_compare.cpp)
add_executable(std_minmax_element std_minmax_element.cpp)























