add_executable(BST_implrmentation BST_implrmentation.cpp)
add_executable(Find_height_of_sbt Find_height_of_sbt.cpp)
add_executable(Finding_min_and_max_values_using_iterative_approach Finding_min_and_max_values_using_iterative_approach.cpp)
add_executable(Finding_min_and_max_values_using_recursive_approach Finding_min_and_max_values_using_recursive_approach.cpp)
add_executable(Invert_tree Invert_tree.cpp)
add_executable(Last_common_ancestor Last_common_ancestor.cpp)
add_executable(preoder_traversal preoder_traversal.cpp)